Adds the security layer to the Comment package, and updates tests. Comments now use the ID of the authenticated user, rather than requiring it to be set in the DTO